<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_post_new">
    
    <fragment
        android:id="@+id/navigation_post_list"
        android:name="net.c306.photopress.ui.postList.PostListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_post_list" />
    
    <fragment
        android:id="@+id/navigation_post_new"
        android:name="net.c306.photopress.ui.newPost.NewPostFragment"
        android:label="@string/title_post_new"
        tools:layout="@layout/fragment_post_new" />
    
    <fragment
        android:id="@+id/navigation_settings"
        android:name="net.c306.photopress.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
