<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_status_bar"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:tag="welcome2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/cd_photopress_logo"
        android:src="@drawable/ic_app_splash"
        app:layout_constraintBottom_toTopOf="@id/image_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_login_to_wordpress"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/subtitle_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_half"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/subtitle_login_to_wordpress"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_welcome" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view_done"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/message_wp_or_jetpack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_welcome"
        app:lottie_autoPlay="false"
        app:lottie_rawRes="@raw/anim_done"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/go_to_select_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_half"
        android:drawableEnd="@drawable/ic_next"
        android:drawableTint="?colorControlNormal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/label_next_pick_a_blog"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/message_wp_or_jetpack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation_view_done"
        app:layout_constraintVertical_bias="0"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_login"
        style="@style/Button.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect_with_wordpress"
        app:layout_constraintBottom_toTopOf="@id/message_wp_or_jetpack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_welcome" />

    <TextView
        android:id="@+id/message_wp_or_jetpack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:lineSpacingMultiplier="1.25"
        android:text="@string/message_login_to_wordpress"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintBottom_toTopOf="@id/progress_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/welcome_progress_indicator" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>